--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #c1c1c1;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -161,7 +161,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h3 {
-  color: #f18200;
+  color: #1f1200;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -192,17 +192,12 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
   right: 0;
-  top: 80px;
   width: 50%;
 }
 .inside #map {
@@ -240,12 +235,10 @@ nav h1 a {
   border-radius: 5px;
 }
 #restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 30px 40px 30px;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 0 40px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
